trunk/Archive2/e8/8390cbc2f3a54e/output
main.cpp: In instantiation of 'class TwiceBoundFunction<void(SomeClass*, std::back_insert_iterator<std::vector<SomeStruct> >, double), SomeClass*, std::back_insert_iterator<std::vector<SomeStruct> > >':
main.cpp:87:81:   required from 'class MyFunctionObjectClass<SomeStruct, void(SomeClass*, std::back_insert_iterator<std::vector<SomeStruct> >, double)>'
main.cpp:118:151:   required from here
main.cpp:55:13: error: no type named 'type' in 'struct boost::result_of<boost::function<void(SomeClass*, std::back_insert_iterator<std::vector<SomeStruct> >, double)>(SomeClass*, std::back_insert_iterator<std::vector<SomeStruct> >)>'
     >::type operator()() const
             ^
